small last-minute changes

--- a/myspace-project/src/components/About.css
+++ b/myspace-project/src/components/About.css
@@ -32,8 +32,15 @@
 }
 
 .about-login {
-    margin-bottom: auto;
+    margin-bottom: 10px;
     font-size: 1em;
+}
+
+.about-login img {
+    margin: 5px;
+    margin-top: 10px;
+    margin-left: 0px;
+    width: 30%;
 }
 
 .about-profile-image img {
