--- a/myspace-project/src/components/Blurbs.css
+++ b/myspace-project/src/components/Blurbs.css
@@ -6,6 +6,10 @@
     text-align: center;
 }
 
+.blurbs img {
+    margin-bottom: 10px;
+}
+
 .blurbs h3 {
     font-size: 1.4rem;
     padding: 5px;
@@ -60,7 +64,6 @@ ul a {
 
 .blurbs-dropdown,
 .blurbs-dropdown p {
-    width: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -72,7 +75,7 @@ ul a {
 
 .blurbs-dropdown select {
     text-align: center;
-    width: auto;
+    width: 80%;
     background-color: var(--background-pink);
     color: var(--font-purple);
     border: 1px solid var(--background-dark-pink);
