--- a/myspace-project/src/components/Blurbs.css
+++ b/myspace-project/src/components/Blurbs.css
@@ -119,14 +119,14 @@ ul a {
     font-weight: 700;
 }
 
+.blurbs-ranni img {
+    margin: 2px;
+    margin-bottom: -3px;
+    width: 20px;
+}
+
 .blurbs-ranni-embed img {
     width: 50%;
     margin: 10px;
     margin-bottom: 20px;
-}
-
-.blurbs-ranni-image img {
-    margin: 2px;
-    margin-bottom: -3px;
-    width: 20px;
 }
